opam-version: "1.2"
maintainer:   "=@jgjl.de"
homepage:     "https://github.com/jgjl/ocaml-netaddr"
dev-repo:     "https://github.com/jgjl/ocaml-netaddr.git"
bug-reports:  "https://github.com/jgjl/ocaml-netaddr/issues"
authors: [ "Jeremias Blendin" ]
license: "ISC"

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name "-j" jobs]
]

depends: [
  "jbuilder"     {build & >="1.0"}
  "configurator" {build}
  "stdint"
  "angstrom"
  "alcotest" {test & >="0.7.0"}
]
available: [ocaml-version >= "4.05.0"]